bug fix: drop down nav menu auto collapse

--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -86,7 +86,7 @@ a.active:hover {
     width: 200px;
     position: absolute;
     top:80px;
-    right: 0;
+    right: 10px;
     height: 0;
     opacity: 0;
     overflow: hidden;
